# meditation_app

./: Cargo.toml  README.md  flake.nix
data/: greeting.db
src/: main.rs
templates/: greetings.html
